# loader

./: Cargo.toml  Depot.toml
depot/: Cargo.toml
depot/src/: depot.rs  error.rs  lib.rs  loader.rs
entity/: Cargo.toml
entity/src/: data.rs  lib.rs  library.rs  meta.rs
entity/src/meta/: action.rs  eval.rs  method.rs  mod.rs  query.rs
package/: Cargo.toml
package/src/: lib.rs
src/: loader.rs  main.rs
test-meta-package/: Cargo.toml
test-meta-package/src/: lib.rs
