[package]
name = "improto"
version = "0.1.0"
authors = ["aksenzhuk"]
edition = "2018"

[workspace]
members = [
    "package",
    "depot",
    "entity",
    "test-meta-package"
]

[dependencies]
config = "0.9"
log = "0.4"
simple_logger = "1.0"
package = { path = "package", version = "0.1.0" }
depot = { path = "depot", version = "0.1.0" }
entity = { path = "entity", version = "0.1.0" }
test-meta-package = { path = "test-meta-package", version = "0.1.0" }
